# oscar-gear-academy

contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/io/src/: lib.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/04-tamagotchi-shop/: Cargo.toml
contracts/04-tamagotchi-shop/io/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/05-tamagotchi-auto/: Cargo.toml
contracts/05-tamagotchi-auto/io/: Cargo.toml
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/05-tamagotchi-auto/store/: Cargo.toml
contracts/05-tamagotchi-auto/tests/: owning.rs
contracts/06-tamagotchi-army/tamagotchi-factory/: Cargo.toml
contracts/06-tamagotchi-army/tamagotchi-factory/io/: Cargo.toml
contracts/06-tamagotchi-army/tamagotchi-factory/io/src/: lib.rs
contracts/06-tamagotchi-army/tamagotchi-factory/src/: lib.rs
contracts/06-tamagotchi-army/tamagotchi-factory/tests/: factory.rs
contracts/tamagotchi-battle/: Cargo.toml
contracts/tamagotchi-battle/io/: Cargo.toml
contracts/tamagotchi-battle/io/src/: lib.rs
contracts/tamagotchi-battle/src/: lib.rs
store/io/: Cargo.toml
