[package]
name = "tamagotchi-shop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-shop-io.workspace = true
sharded-fungible-token-io.workspace = true
store-io.path.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-shop-io.workspace = true
